[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymerase-tm"
version = "0.4.1"
description = "Exact reproduction of the NEB Tm Calculator for PCR primer analysis with all NEB polymerases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Dioskurides" },
]
keywords = [
    "pcr", "primer", "melting-temperature", "tm", "annealing-temperature",
    "q5", "phusion", "taq", "bioinformatics", "molecular-biology",
    "gibson-assembly", "dmso",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.80",
]

[project.urls]
Homepage = "https://github.com/Dioskurides/polymerase-tm"
Issues = "https://github.com/Dioskurides/polymerase-tm/issues"

[project.scripts]
polymerase-tm = "polymerase_tm.cli:main"
